--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,19 +2,19 @@
 <!DOCTYPE html>
     <html lang="en">
     <meta charset="UTF-8">
-    <title>Sunset Solar Solutions</title>
+    <title>Bcca Team Viewer</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel='stylesheet' href='{% static 'styles.css' %}'>
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'icons/favicon.ico' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
 
     <body class='background d-flex flex-column min-vh-100'>
         
-        <div> 
+        <div class='container'> 
             <ul>
-                <li><a href="{% url 'home'%}">Home</a></li>
+                <li class=''><a href="{% url 'home'%}">Home</a></li>
                 <li><a href="{% url 'community'%}">Community</a></li>
                 <li><a href="{% url 'documentation'%}">Documentation</a></li>
                 <li><a href="{% url 'management'%}">Management</a></li>
