--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,7 +1,61 @@
+{%load static%}
+<!DOCTYPE html>
+    <html lang="en">
+    <meta charset="UTF-8">
+    <title>Code Connect Hub</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel='stylesheet' href='{% static 'styles.css' %}'>
+    <link rel="shortcut icon" type="image/png" href="{% static 'icons/favicon.ico' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="{% static 'main.js' %}"></script>
+    <body class='background d-flex flex-column min-vh-100'>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class='center'>
+            <div class='container middleOfScreen mt-5'>
+                <h1 id="form-title" class='text-center'>Create Account</h1>
+                <form method='POST' action=''>
+                    {% csrf_token %}
+                        {% for error in errors %}
+                            <div class="alert alert-danger d-flex middleOfScreen center w-50" role="alert">{{ error|striptags }}</div>
+                        {% endfor %}
+                    <br>
 
-{% extends "base.html" %}
-{% block content %}
+                    {% for field in form %}
+                        <div class="mb-3">
+                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                            {{field}}
+                        </div>
+                    {% endfor %}
+                    <div class='center text-center'>
+                        <button type='submit' class='btn btn-primary'>Create User</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <br>
+        <p class='subtextFont text-center'> Already have an account? <a href='{% url 'login'%}' class='subtextFont'>Login here</a></p>
+        <footer class="footer mt-auto py-3 bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <a class="footerElements" href="{% url 'home'%}">Home</a>
+                        <a class="footerElements" href="{% url 'community'%}">Community</a>
+                        <a class="footerElements" href="{% url 'documentation'%}">Documentation</a>
+                        <a class="footerElements" href="{% url 'management'%}">Management</a>
+                        <a class="footerElements" href="{% url 'procurement'%}">Procurement</a>
+                        <a href="{% url 'home'%}"><img src="{% static 'images/dark_base_camp_logo.png' %}" alt="Logo" class="img-fluid" style="max-height: 50px;"></a>
+                    </div>
+                    <p class='small text-center'>&copy;All Rights Reserved 2024 Base Camp Coding Academy</p>
+                </div>
+            </div>
+        </footer>
 
-
-
-{% endblock content %}
+    </body>
+</html>
