styled login & sign up pages

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -29,3 +29,7 @@
 }
 /* end footer */
 
+.baseCampBackground{
+  background-image: url(images/baseCamp_building_snipped.jpg);
+  overflow: hidden;
+}
