--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
     <html lang="en">
     <meta charset="UTF-8">
-    <title>Code Connect Hub</title>
+    <title>Login</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel='stylesheet' href='{% static 'styles.css' %}'>
     <link rel="shortcut icon" type="image/png" href="{% static 'icons/favicon.ico' %}">
@@ -10,48 +10,46 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
 
-    <body class='background d-flex flex-column min-vh-100'>
+    <body class='background d-flex flex-column min-vh-100 baseCampBackground'>
         <br>
         <br>
         <br>
         <br>
         <br>
         <br>
-        <br>    
-        <h1 class='text-center'>Login</h1>
-        <div class="d-flex justify-content-center form_container">
-            <form method="POST" action="">
-                {% csrf_token %}
-                <p class='error'>{{Incorrect_username_or_password}}</p>
+        <br>   
+        <div class='d-flex justify-content-center'> 
+            <div class='bg-light d-smoke rounded w-25'>
+                <br>
+                <h1 class='text-center'>Login</h1>
+                <div class="d-flex justify-content-center form_container">
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        <p class='error'>{{Incorrect_username_or_password}}</p>
 
-                <div class="input-group mb-3">
-                    <input type="text" name="username" placeholder="Username..." class="form-control">
-                </div>
+                        <div class="input-group mb-3">
+                            <input type="text" name="username" placeholder="Username..." class="form-control">
+                        </div>
 
-                <div class="input-group mb-2">
-                    <input type="password" name="password" placeholder="Password..." class="form-control" >
-                </div>
+                        <div class="input-group mb-2">
+                            <input type="password" name="password" placeholder="Password..." class="form-control" >
+                        </div>
 
-                <div class="d-flex justify-content-center mt-3 login_container">
-                    <input class="btn login_btn" type="submit" value="Login">
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <input class="btn login_btn" type="submit" value="Login">
+                        </div>
+                    </form>
                 </div>
-            </form>
+                <br>
+                <p class='subtextFont text-center'> Don't have an account? <a href='{% url 'signup'%}' class='subtextFont'> Sign up Here</a></p>
+                <br>
+            </div>  
         </div>
 
-        <br>
-        <p class='subtextFont text-center'> Don't have an account? <a href='{% url 'signup'%}' class='subtextFont'> Sign up Here</a></p>
-
         <footer class="footer mt-auto py-3 bg-light">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 text-center">
-                        <a class="footerElements" href="{% url 'home'%}">Home</a>
-                        <a class="footerElements" href="{% url 'community'%}">Community</a>
-                        <a class="footerElements" href="{% url 'documentation'%}">Documentation</a>
-                        <a class="footerElements" href="{% url 'management'%}">Management</a>
-                        <a class="footerElements" href="{% url 'procurement'%}">Procurement</a>
-                        <a href="{% url 'home'%}"><img src="{% static 'images/dark_base_camp_logo.png' %}" alt="Logo" class="img-fluid" style="max-height: 50px;"></a>
-                    </div>
+            <div class="container center">
+                <div class="d-flex justify-content-between align-items-center">
+                    <a class='' href="{% url 'home'%}"><img src="{% static 'images/dark_base_camp_logo.png' %}" alt="Logo" class="img-fluid" style="max-height: 50px;"></a>
                     <p class='small text-center'>&copy;All Rights Reserved 2024 Base Camp Coding Academy</p>
                 </div>
             </div>
