--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -18,7 +18,7 @@
         <br>
         <br>
         <div class='d-flex justify-content-center'> 
-            <div class='bg-light d-smoke rounded w-25'>
+            <div class='bg-light d-smoke rounded w-sm-75 w-lg-25 p-4'>
                 <div class='container middleOfScreen mt-5'>
                     <h1 id="form-title" class='text-center'>Create Account</h1>
                     <form method='POST' action=''>
