you can now logout to

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,7 @@
                         <a class="footerElements" href="{% url 'documentation'%}">Documentation</a>
                         <a class="footerElements" href="{% url 'management'%}">Management</a>
                         <a class="footerElements" href="{% url 'procurement'%}">Procurement</a>
+                        <a class="footerElements" href="{% url 'logout'%}">Logout</a>
                         <a href="{% url 'home'%}"><img src="{% static 'images/dark_base_camp_logo.png' %}" alt="Logo" class="img-fluid" style="max-height: 50px;"></a>
                     </div>
                     <p class='small text-center'>&copy;All Rights Reserved 2024 Base Camp Coding Academy</p>
