added in bugBoard template,view,url

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,10 +16,10 @@
         <div class='container'> 
             <ul>
                 <li><a class='footerElements' href="{% url 'home'%}">Home</a></li>
-                <li><a class='footerElements' href="{% url 'community'%}">Community</a></li>
+                {% comment %} <li><a class='footerElements' href="{% url 'community'%}">Community</a></li>
                 <li><a class='footerElements' href="{% url 'documentation'%}">Documentation</a></li>
                 <li><a class='footerElements' href="{% url 'management'%}">Management</a></li>
-                <li><a class='footerElements' href="{% url 'procurement'%}">Procurement</a></li>
+                <li><a class='footerElements' href="{% url 'procurement'%}">Procurement</a></li> {% endcomment %}
             </ul>
         </div>
 
@@ -31,11 +31,15 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <a class="footerElements" href="{% url 'home'%}">Home</a>
-                        <a class="footerElements" href="{% url 'community'%}">Community</a>
+                        {% comment %} <a class="footerElements" href="{% url 'community'%}">Community</a>
                         <a class="footerElements" href="{% url 'documentation'%}">Documentation</a>
                         <a class="footerElements" href="{% url 'management'%}">Management</a>
-                        <a class="footerElements" href="{% url 'procurement'%}">Procurement</a>
-                        <a class="footerElements" href="{% url 'logout'%}">Logout</a>
+                        <a class="footerElements" href="{% url 'procurement'%}">Procurement</a> {% endcomment %}
+                        {% if request.user.is_authenticated %}
+                            <a class="footerElements" href="{% url 'logout'%}">Logout</a>
+                        {% else %}
+                            <a class="footerElements" href="{% url 'login'%}">Login</a>
+                        {% endif %}
                         <a href="{% url 'home'%}"><img src="{% static 'images/dark_base_camp_logo.png' %}" alt="Logo" class="img-fluid" style="max-height: 50px;"></a>
                     </div>
                     <p class='small text-center'>&copy;All Rights Reserved 2024 Base Camp Coding Academy</p>
