--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -31,8 +31,8 @@
                                 {{field}}
                             </div>
                         {% endfor %}
-                        <div class='center text-center'>
-                            <button type='submit' class='btn btn-primary'>Create User</button>
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <input class="btn login_btn" type="submit" value="Signup">
                         </div>
                     </form>
                 </div>
