--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,9 @@
                         <a class="footerElements" href="{% url 'documentation'%}">Documentation</a>
                         <a class="footerElements" href="{% url 'management'%}">Management</a>
                         <a class="footerElements" href="{% url 'procurement'%}">Procurement</a> {% endcomment %}
+                        <a class="footerElements" href="{% url 'bugBoard'%}">Bug Board</a>
                         {% if request.user.is_authenticated %}
+                            <a class="footerElements" href="{% url 'profile'%}">Profile</a>
                             <a class="footerElements" href="{% url 'logout'%}">Logout</a>
                         {% else %}
                             <a class="footerElements" href="{% url 'login'%}">Login</a>
