--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,7 +19,7 @@
         <div class='d-flex justify-content-center'> 
             <div class='bg-light d-smoke rounded w-sm-75 w-lg-25 p-4'>
                 <br>
-                <h1 class='text-center'>Login</h1>
+                <h1 class='text-center'>Login Account</h1>
                 <div class="d-flex justify-content-center form_container">
                     <form method="POST" action="">
                         {% csrf_token %}
