--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -33,6 +33,12 @@
         </div>
     </div>
     <br>
+    <br>
+    <br>
+    {% comment %} graph goes here {% endcomment %}
+    <br>
+    <br>
+    <br>
     <div class="col-md-8 container">
         <div class="card border-brown">
             <div class="card-header text-blue blue-shadow chonk-font">
