--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -79,5 +79,22 @@ body,html{
 }
 /* end footer */
 
+/* profile */
 
+.left_element{
+  max-width: 400px !important;
+  margin-left: -8px !important;
+}
 
+.right_element{
+  max-width: 400px !important;
+  margin-right: -8px !important;
+}
+
+@media only screen and (max-width: 600px) {
+.left_element,.right_element{
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-top: 10px !important;
+}
+}
