minor font changes

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -22,7 +22,7 @@
         <div class='center row w-75'>
             <div class="container min-width-50 left_element" style="justify-content-between;">
                 <div class="card background-blue">
-                    <div class="card-header text-brown blue-shadow">
+                    <div class="card-header text-brown blue-shadow chonk-font">
                         Notifications
                     </div>
                     <ul class="list-group list-group-flush overflow">
@@ -34,7 +34,7 @@
             </div>
             <div class="container min-width-50 right_element" style="justify-content-between;">
                 <div class="card background-blue">
-                    <div class="card-header text-brown blue-shadow">
+                    <div class="card-header text-brown blue-shadow chonk-font">
                         Code coins earned this week
                     </div>
                     <ul class="list-group list-group-flush overflow">
@@ -50,7 +50,7 @@
     <br>
 
     <div class="center text-center">
-        <h3 class='text-blue brown-shadow'>Monthly Bugs Fixed by You</h3>
+        <h3 class='text-blue brown-shadow chonk-font'>Monthly Bugs Fixed by You</h3>
         <div class="w-50 h-50 mx-auto">
             <canvas id="bugFixChart" width="400" height="200"></canvas>
         </div>
