--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
 
-    <body class='background d-flex flex-column min-vh-100 baseCampBackground'>
+    <body class=' d-flex flex-column min-vh-100 baseCampBackground'>
         <br>
         <br>
         <br>
