--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,23 +11,60 @@
     <script src="{% static 'main.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <body class='background d-flex flex-column min-vh-100'>
+    <body class=' d-flex flex-column min-vh-100'>
 
         {% comment %} header {% endcomment %}
         <div class='container'> 
-            <ul>
-                <li><a class='footerElements' href="{% url 'home'%}">Home</a></li>
-                {% comment %} <li><a class='footerElements' href="{% url 'community'%}">Community</a></li>
-                <li><a class='footerElements' href="{% url 'documentation'%}">Documentation</a></li>
-                <li><a class='footerElements' href="{% url 'management'%}">Management</a></li>
-                <li><a class='footerElements' href="{% url 'procurement'%}">Procurement</a></li> {% endcomment %}
-            </ul>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="{% url 'home' %}">
+                    <img src="{% static 'images/dark_base_camp_logo.png' %}" alt="Logo" class="img-fluid" style="max-height: 50px;">
+                </a>
+        
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'home' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'bugBoard' %}">Bug Board</a>
+                        </li>
+        
+                        {% if request.user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'login' %}">Login</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
         </div>
 
-        {% block content %}{% endblock content %}
+        {% comment %} sidebar {% endcomment %}
+        <div class="container-fluid">
+            <div class="row">
+                <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block background-brown sidebar">
+                    <!-- Sidebar content goes here -->
+                </nav>
+                <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                    {% block content %}{% endblock %}
+                </main>
+            </div>
+        </div>
+
 
         {% comment %} Footer {% endcomment %}
-        <footer class="footer mt-auto py-3 bg-light">
+        <footer class="footer mt-auto py-3 background-blue">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
