--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,33 +14,35 @@
     <body class=' d-flex flex-column min-vh-100'>
 
         {% comment %} header {% endcomment %}
-        <div class='container'> 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="{% url 'home' %}">
+        <div class='width100'> 
+            <nav class="navbar navbar-expand-lg navbar-light background-blue">
+                <a class="navbar-brand ms-3" href="{% url 'home' %}">
                     <img src="{% static 'images/dark_base_camp_logo.png' %}" alt="Logo" class="img-fluid" style="max-height: 50px;">
                 </a>
         
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
         
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'home' %}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'bugBoard' %}">Bug Board</a>
-                        </li>
-        
+                    <ul class="navbar-nav">       
                         {% if request.user.is_authenticated %}
                             <li class="nav-item">
+                                <a class="nav-link" href="{% url 'bugBoard' %}">Bug Board</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'setting' %}">Settings</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                             </li>
                         {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'login' %}">Login</a>
                             </li>
@@ -68,12 +70,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a class="footerElements" href="{% url 'home'%}">Home</a>
-                        <a class="footerElements" href="{% url 'bugBoard'%}">Bug Board</a>
                         {% if request.user.is_authenticated %}
+                            <a class="footerElements" href="{% url 'bugBoard'%}">Bug Board</a>
                             <a class="footerElements" href="{% url 'profile'%}">Profile</a>
+                            <a class="footerElements" href="{% url 'setting'%}">Settings</a>
                             <a class="footerElements" href="{% url 'logout'%}">Logout</a>
                         {% else %}
+                            <a class="footerElements" href="{% url 'home'%}">Home</a>
                             <a class="footerElements" href="{% url 'login'%}">Login</a>
                         {% endif %}
                         <a href="{% url 'home'%}"><img src="{% static 'images/dark_base_camp_logo.png' %}" alt="Logo" class="img-fluid" style="max-height: 50px;"></a>
