--- a/app/templates/setting.html
+++ b/app/templates/setting.html
@@ -2,12 +2,28 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class='container w-25'>
+    <form method="POST" action="">
+        {% csrf_token %}
+        <p class='error'>{{Incorrect_username_or_password}}</p>
 
-<form action = "" method = "post">
-    {% csrf_token %}
-    {{form.as_p }}
-    <input type="submit" value=Submit">
-</form>
+        <div class="input-group mb-2">
+            <input type="password" name="old_password" placeholder="Old Password..." class="form-control">
+        </div>
+
+        <div class="input-group mb-2">
+            <input type="password" name="new_password" placeholder="New Password..." class="form-control">
+        </div>
+
+        <div class="input-group mb-2">
+            <input type="password" name="confirm_password" placeholder="Confirm New Password..." class="form-control">
+        </div>
+
+        <div class="d-flex justify-content-center mt-3 login_container">
+            <input class="btn login_btn" type="submit" value="Change Password">
+        </div>
+    </form>
+</div>
 
 
 {% endblock content %}
