--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -26,7 +26,7 @@
                     
                         {% for field in form %}
                             <div class="mb-3 input-group">
-                                <input type="{{ field.widge.input_type }}" name="{{ field.name }}" placeholder="{{ field.label }}" class="form-control">
+                                <input type="{{ field.widget.input_type }}" name="{{ field.name }}" placeholder="{{ field.label }}" class="form-control">
                             </div>
                         {% endfor %}
                         <div class="d-flex justify-content-center mt-3 login_container">
