--- a/app/templates/setting.html
+++ b/app/templates/setting.html
@@ -1,29 +1,39 @@
-
 {% extends "base.html" %}
 {% block content %}
 
-<div class='container w-25'>
-    <form method="POST" action="">
-        {% csrf_token %}
-        <p class='error'>{{Incorrect_username_or_password}}</p>
+<br>
 
-        <div class="input-group mb-2">
-            <input type="password" name="old_password" placeholder="Old Password..." class="form-control">
-        </div>
+<div class='maxWidthBox container text-center bg-light d-smoke rounded w-sm-75 w-lg-25 p-4'>
+    <h3> Change Password </h3>
+    <div class=''>
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <p{% if message.tags %} class="error errorShadow"{% endif %}>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+        <form method="POST" action="">
+            {% csrf_token %}
+            <p class='error'>{{ Incorrect_username_or_password }}</p>
 
-        <div class="input-group mb-2">
-            <input type="password" name="new_password" placeholder="New Password..." class="form-control">
-        </div>
+            <div class="input-group mb-2">
+                <input type="password" name="old_password" placeholder="Old Password..." class="form-control">
+            </div>
 
-        <div class="input-group mb-2">
-            <input type="password" name="confirm_password" placeholder="Confirm New Password..." class="form-control">
-        </div>
+            <div class="input-group mb-2">
+                <input type="password" name="new_password1" placeholder="New Password..." class="form-control">
+            </div>
 
-        <div class="d-flex justify-content-center mt-3 login_container">
-            <input class="btn login_btn" type="submit" value="Change Password">
-        </div>
-    </form>
+            <div class="input-group mb-2">
+                <input type="password" name="new_password2" placeholder="Confirm New Password..." class="form-control">
+            </div>
+
+            <div class="d-flex justify-content-center mt-3 login_container">
+                <input class="btn login_btn" type="submit" value="Submit">
+            </div>
+        </form>
+    </div>
 </div>
-
 
 {% endblock content %}
